<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>net.poetryhack.poetryhook.examples</groupId>
  <artifactId>PoetryHookExampleAgent</artifactId>
  <version>1.0.0</version>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.3.0</version>
        <configuration>
          <includes>
            <include>net/poetryhack/poetryhook/examples/exampleagent/**</include>
          </includes>
          <archive>
            <manifestEntries>
              <Agent-Class>net.poetryhack.poetryhook.examples.exampleagent.AgentMain</Agent-Class>
              <Can-Retransform-Classes>true</Can-Retransform-Classes>
            </manifestEntries>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>1.2.1</version>
        <configuration>
          <executable>java</executable>
          <arguments>
            <argument>-Djdk.attach.allowAttachSelf=true</argument>
            <argument>-classpath</argument>
            <classpath />
            <argument>net.poetryhack.poetryhook.examples.exampleapp.AppMain</argument>
          </arguments>
        </configuration>
      </plugin>
    </plugins>
  </build>


  <properties>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>net.poetryhack.poetryhook</groupId>
      <artifactId>poetryhook</artifactId>
      <version>1.0.0</version>
    </dependency>
  </dependencies>
</project>
